# 6DOF_Robotic_Arm

./: README.md
robotic_arm/: openocd.cfg
robotic_arm/agent_ws/install/: local_setup.sh  setup.sh
robotic_arm/agent_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
robotic_arm/agent_ws/log/: latest_build
robotic_arm/f401re_micro_ros/: .cproject  .mxproject  .project  Makefile  f401re_micro_ros.ioc
robotic_arm/f401re_micro_ros/Core/Src/: freertos.c  main.c  usart.c
robotic_arm/f401re_micro_ros/firmware/cmake/: dummy_toolchain.cmake
robotic_arm/f401re_micro_ros/firmware/dev_ws/install/: local_setup.sh  setup.sh
robotic_arm/f401re_micro_ros/firmware/dev_ws/log/: latest_build
robotic_arm/f401re_micro_ros/firmware/mcu_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robotic_arm/f401re_micro_ros/firmware/mcu_ws/log/: latest_build
robotic_arm/f401re_micro_ros/install/: local_setup.sh  setup.sh
robotic_arm/f401re_micro_ros/log/: latest_build
robotic_arm/install/: local_setup.sh  setup.sh
robotic_arm/log/: latest_build
ros2_ws/install/joy_to_arm_interface/lib/joy_to_arm_interface/: ps4_control_node
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/joy_to_arm_interface/: CMakeLists.txt
ros2_ws/src/joy_to_arm_interface/src/: ps4_control_node.cpp
ros2_ws/src/log/: latest_build
ros2_ws/src/robotic_arm_interfaces/: CMakeLists.txt
ros2_ws/src/robotic_arm_interfaces/msg/: PositionRoboticArm.msg
(+155 files in other folders)
